--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -11,10 +11,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748468.md#1" target="_blank">天地清明引(156) 东流水－十年生死2</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748468.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/09/0213-3-150x120.jpg" align ="left"></a>昭雪手持鱼食，独坐水亭，呆呆望远，水中锦鲤嬉戏，绕着鱼饵打圈。忽地，眼前落下一物，落于水中，定睛一看，原来是朵牡丹花。回身之间，纳兰走近身来，昭雪登时皱眉：“花开得好，为何就摘了？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745640.md#1" target="_blank">苟瑞传奇：奇遇圣母 藩王问道 三拒嘉靖</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745640.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/getCollectionImage.aspx_-150x120.jpg" align ="left"></a>明朝嘉靖年间，少女苟正觉在山中遇到一位老母，吃下了一根奇草，开启了传奇的一生。明世宗嘉靖皇帝三次派人相请，最后一次，她预示了不久帝崩。明朝藩王与王妃以礼相待，为其建阁修祠。官员长途跋涉，向她请益。她未卜先知，每言奇中，在大明朝野留下闻世传奇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754199.md#1" target="_blank">颜真卿《祭侄文稿》至情至性震动千古</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754199.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2002/08/Jizhiwengao_xqf-150x120.jpg" align ="left"></a>《祭侄文稿》是唐朝忠义圣哲颜真卿为年轻殉国的侄子写的祭文草稿，乍看之下通篇字迹凌乱、涂改，为何被元朝书法家鲜于枢评为“天下第二行书”，辈受到后世推崇？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 1:56 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761805.md#1" target="_blank">语言能力影响移民在校表现</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761805.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_Was1116329-150x120.jpg" align ="left"></a>语言能力通常被认为是移民成功融入新国家的关键。研究发现，更好的语言能力可以带来更好的在校表现。例如，对比第一代移民（自己移民或与父母一起移民的人）和第二代移民（在新国家出生的人），第二代移民的在校成绩通常更好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 11:23 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761781.md#1" target="_blank">中国留学生：澳大利亚让我吃惊的10件事</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761781.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/468A7049-150x120.jpg" align ="left"></a>一位来自中国大陆的留学生在澳大利亚求学了一年多后，分享了首次来澳洲时令他感到惊讶的十件事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 11:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761733.md#1" target="_blank">孩子焦虑的八大症状</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_98236344_Subscription_L-150x120.jpg" align ="left"></a>焦虑不仅仅是成人的专利，事实上，很多孩子在不同阶段和场合都可能遭受焦虑困扰，但表现形式却各不相同。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:56 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761685.md#1" target="_blank">英国权威专家警告：技术正在威胁孩子成长</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761685.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/1407050653212109-150x120.jpg" align ="left"></a>一家领先的儿童心理健康研究权威机构近日警告，数字技术正在破坏孩子与成人之间至关重要的相处和学习关系，使青少年心理健康处于危险之中，并因此威胁到孩子的成长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748439.md#1" target="_blank">天地清明引(155) 东流水－十年生死1</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748439.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/09/0213-3-150x120.jpg" align ="left"></a>金山本在尚书府，接郭络罗密令，唆使百姓涌入王庭，制造混乱。未知结果如何，整夜于中堂踱步。几次派人出去打探，皆石沉大海，黎明将至，好容易有人回转府中，言王庭戒严，街市布满兵部之人。再三询问，胜负不置可否。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756323.md#1" target="_blank">清朝人冥界见闻：人心生一念 天地尽皆知</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756323.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1603152303261497-150x120.jpg" align ="left"></a>清代一个住在北村名叫郑苏仙的人，一天晚上梦见自己到了冥府，看见阎罗王正在登记审判刚抓到冥界之人。其中一个邻村的老妇人来到大殿后，阎王一改严肃的面容还向其拱手，并赐了一杯茶，然后下令冥吏将她送到一个好人家转生去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 1:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760924.md#1" target="_blank">五律：风土</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760924.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/download-1-1-150x120.png" align ="left"></a>星分九州美，人作好春光。 风土秀千色，云山独一方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 12:25 AM			</td></tr>
@@ -25,6 +22,9 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746914.md#1" target="_blank">鼠年话鼠：灵鼠和钱鼠</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746914.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/ce0d55c815bdbc3448eba20fdf960c89-150x120.png" align ="left"></a>鼠年话鼠，它可以是灵鼠、黠鼠、义鼠、钱鼠、善鼠、报恩鼠。有趣、奇趣的中国民间传说被古籍留下来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:32 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/21/n11737632.md#1" target="_blank">自伐者无功！三国谋士许攸的教训</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/21/n11737632.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1901031410372250-150x120.jpg" align ="left"></a>老子曾说：“自伐者无功。”自伐，自我夸耀的意思。一个人做了许多事，立下了很多功业，造福于人自然是一件好事。为何会“自伐者无功”？想必，任何卓越的功勋的背后，往往有天道的运筹，有人事的合理安排，有地理环境的便利，三者和合，才会取得巨大的成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 5:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745592.md#1" target="_blank">天地清明引(154) 东流水－树倒猴散4</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5e0b1c5127821b0d0b5db8b58205d088-150x120.jpg" align ="left"></a>话说郭络罗安排停当，静待纳兰入宫。纳兰下马卸刀，随朱公公入王后寝殿。不多时，内里传来砍杀吼叫之声，约莫半盏茶功夫，悄无声息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 8:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758629.md#1" target="_blank">青松絮语：歪打正着</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758629.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/iStock-543335228-150x120.jpg" align ="left"></a>不光设限，我们还习惯了在局限中行走，偏离了局限反而会有各种担忧。有时候，也许我们都需要走出局限，看看局外的样子，是不是也千姿百态呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 12:54 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758551.md#1" target="_blank">五律：大山</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758551.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/03131c0e752e87ea2231a913526dce5c-150x120.png" align ="left"></a>大山深几许，深处有人家。 朝夕云烟袅，往来星斗斜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 12:20 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758562.md#1" target="_blank">许其正：渔夫</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758562.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/09/1209090756031758-150x120.jpg" align ="left"></a> 百炼成钢。要造就一块好的钢，必须经过许多锤打和凝炼。  成功不能幸致。做一个好渔夫，不是容易的。风雨、烈阳、惊涛骇浪和终年枯寂的海上生活......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 12:14 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765966.md#1" target="_blank">歌词：山依依，水依依</a><br></h3> 山依依，水依依， 小雨叫醒春天的小溪。 爷爷穿着他爷爷留下的蓑衣， 守望着古老的河川， 用绿色勾勒出一片生机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 10:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761463.md#1" target="_blank">神力神迹与神技的磁气民族</a><br></h3>
 研究犹太文化可以激醒浅睡中的“磁气文化 ”——中国文化中的“金神文化”（2-2）
